--- a/ProgettoAMM/web/WEB-INF/web.xml
+++ b/ProgettoAMM/web/WEB-INF/web.xml
@@ -4,19 +4,32 @@
         <servlet-name>Login</servlet-name>
         <servlet-class>amm.nerdbook.servlet.Login</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Descrizione</servlet-name>
+        <servlet-class>amm.nerdbook.servlet.Descrizione</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Bacheca</servlet-name>
+        <servlet-class>amm.nerdbook.servlet.Bacheca</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
-        <url-pattern>/M2/login.html</url-pattern>
+        <url-pattern>/Login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Descrizione</servlet-name>
+        <url-pattern>/Descrizione</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Bacheca</servlet-name>
+        <url-pattern>/Bacheca</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
             30
         </session-timeout>
-        <welcome-file-list>
-            <welcome-file>/M3/descrizione.jsp</welcome-file>
-        </welcome-file-list>
     </session-config>
     <welcome-file-list>
-        <welcome-file>/M3/descrizione.jsp</welcome-file>
+        <welcome-file>Descrizione</welcome-file>
     </welcome-file-list>
 </web-app>
