--- a/ProgettoAMM/web/WEB-INF/web.xml
+++ b/ProgettoAMM/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>Bacheca</servlet-name>
         <servlet-class>amm.nerdbook.servlet.Bacheca</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Profilo</servlet-name>
+        <servlet-class>amm.nerdbook.servlet.Profilo</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/Login</url-pattern>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>Bacheca</servlet-name>
         <url-pattern>/Bacheca</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Profilo</servlet-name>
+        <url-pattern>/Profilo</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
