--- a/ProgettoAMM/web/WEB-INF/web.xml
+++ b/ProgettoAMM/web/WEB-INF/web.xml
@@ -48,6 +48,10 @@
         <servlet-name>Filter</servlet-name>
         <url-pattern>/filter.json</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Filter</servlet-name>
+        <url-pattern>/Filter</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
